# Reformed

./: .gitattributes  .gitignore  .p4ignore  README.md  SetupIgnore.bat  default.code-workspace
Source/: CMakeLists.txt
Source/Bootstrap/: CMakeLists.txt  Main.cpp
Source/ComponentCore/: CMakeLists.txt
Source/ComponentCore/Private/: Component.cpp
Source/ComponentCore/Public/: Component.hpp  ComponentRegistrar.hpp  ComponentType.hpp
Source/ComponentRepository/: CMakeLists.txt
Source/ComponentRepository/Private/: ComponentRepository.cpp
Source/ComponentRepository/Public/: ComponentRepository.hpp
Source/Configuration/Public/: Configuration.hpp
Source/Editor/: AnimatorRenderer.cpp  AnimatorRenderer.hpp  CMakeLists.txt  CSVParser.cpp  CSVParser.hpp  Command.cpp  Command.hpp  EditorObject.cpp  EditorObject.hpp  EditorObjectManager.cpp  EditorObjectManager.hpp  EditorState.hpp  EditorWindow.cpp  EditorWindow.hpp  EngineController.cpp  EngineController.hpp  FileOpener.cpp  FileOpener.hpp  GraphicsWindow.cpp  HierarchyRenderer.cpp  HierarchyRenderer.hpp  HierarchySelectionKeeper.cpp  HierarchySelectionKeeper.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  InspectorRenderer.cpp  InspectorRenderer.hpp  InspectorWindow.cpp  InspectorWindow.hpp  NavMeshWindow.cpp  ObjectCommand.cpp  ObjectCommand.hpp  ObjectSelector.cpp  SceneWindow.cpp  SceneWindow.hpp  StyleKeeper.cpp  StyleKeeper.hpp  ToolbarRenderer.cpp  ToolbarRenderer.hpp  imgui.ini  (+2 more)
Source/Editor/Components/: AgentRenderer.cpp  AgentRenderer.hpp  AllegianceRenderer.cpp  AllegianceRenderer.hpp  ButtonRenderer.cpp  ButtonRenderer.hpp  ComponentRenderer.cpp  ComponentRenderer.hpp  InputRenderer.cpp  InputRenderer.hpp  RendererRenderer.cpp  RendererRenderer.hpp  RigidBodyRenderer.cpp  RigidBodyRenderer.h  SampleRenderer.cpp  SampleRenderer.hpp
Source/Editor/NodeGraph/: AgentMenuSelection.cpp  AgentMenuSelection.hpp  EditorNode.cpp  GraphTypeSelector.cpp  GraphTypeSelector.hpp  NGE_Watchdog.cpp  NGE_Watchdog.hpp  NodeGraphWindow.cpp  NodeGraphWindow.hpp  NodeManager.cpp  NodeManager.hpp
Source/Editor/Nodes/: BaseNode1.cpp  BaseNode1.hpp  BaseNode2.cpp  TemplateNode.cpp  TemplateNode.hpp
Source/Editor/Renderers/: GizmoRenderer.cpp  GizmoRenderer.hpp  ToggleButton.cpp  ToggleButton.hpp
Source/EditorAdapter/: CMakeLists.txt
Source/EditorAdapter/Private/: GLFWEditorAdapter.cpp
Source/EditorAdapter/Public/: GLFWEditorAdapter.hpp
Source/Engine/AudioEngine/: AE_AudioMath.cpp  AE_RingBuffer.cpp  AudioEngine.cpp  AudioStorage.cpp  CMakeLists.txt  Compressor.cpp  DSPFactory.cpp  DoubleBuffer.cpp  Envelopes.cpp  EventHandler.cpp  Filter.cpp  FilterFactory.cpp  IOTarget.cpp  Parameters.cpp  ProcessingSettings.cpp  Serializer.cpp  Voice.cpp
Source/Engine/AudioTool/: AudioMetrics.cpp  AudioMetrics.h  AudioPlayer.cpp  AudioPlayer.h  AudioSystem.cpp  AudioSystem.h  DSPManipulator.cpp  DSPManipulator.h  FilterManipulator.cpp  FilterManipulator.h  ObjectEditor.cpp  ObjectEditor.h  ObjectHierarchy.cpp  ObjectHierarchy.h  ProcessingDisplay.h  SystemBase.cpp  SystemBase.h  SystemManager.cpp  SystemManager.h  UIEventTypes.h  UI_System.cpp  UI_System.h  imgui.ini  main.cpp
Source/Engine/TempestEngine/: Application.cpp  Application.hpp  CMakeLists.txt  CollisionLayer.hpp  ComponentLists.h  DLLControl.hpp  Engine.cpp  Engine.hpp  Factions.cpp  Factions.hpp  FilterBase.h  GameObjectGatherer.hpp  GamePadSystem.hpp  GamepadControls.cpp  GamepadControls.hpp  LeakDetection.hpp  MeshDebug.cpp  MeshDebug.hpp  PersistenceManipulator.cpp  PersistenceManipulatorInterface.hpp  PersistenceRequest.cpp  PersistenceRequest.hpp  PersistenceSystem.cpp  Precompiled.cpp  Precompiled.h  ScriptMaps.cpp  ScriptMaps.hpp  Serialization.cpp  Serialization.h  SystemBase.cpp  SystemBase.hpp  SystemBundle.cpp  SystemBundle.hpp  SystemManager.hpp  SystemTask.cpp  SystemTask.hpp  TransformTestScript.cpp  TransformTestScript.hpp  debuggerFormatting.natvis
Source/Engine/UnitTests/: CMakeLists.txt  ComponentTypeSetTests.cpp  DataAssuranceTests.cpp  GameObjectTests.cpp  MathFunctionsTest.cpp  Matrix4x4Tests.cpp  Precompiled.cpp  Precompiled.h  PrintHelpers.cpp  QuaternionTest.cpp  TransformTests.cpp  unittests.runsettings
Source/EngineInterfaces/: CMakeLists.txt
Source/EngineInterfaces/Private/: HEADER_ONLY_MODULE.cpp
Source/EngineInterfaces/Public/: ExternalWindowInterface.hpp  IComponentMemoryClasses.hpp  IComponentRepository.hpp  InputSourceInterface.hpp  RenderContextInterface.hpp
Source/EngineRunner/: CMakeLists.txt
Source/EngineRunner/Private/: EngineRunner.cpp
Source/EngineRunner/Public/: EngineRunner.hpp
Source/EventSystem/: CMakeLists.txt
Source/EventSystem/Private/: EventBase.cpp  EventBus.cpp  EventFireError.cpp  EventHandler.cpp
Source/EventSystem/Public/: EventBase.hpp  EventBus.hpp  EventFireError.hpp  EventHandler.hpp  (+3 more)
Source/Graphics.OpenGL4/: CMakeLists.txt  DLLControl.hpp  GLFWAdapter.cpp  GLFWAdapter.hpp  GlfwWindow.cpp  GlfwWindow.hpp  GlfwWindowData.hpp  dummy.cpp
Source/InputFramework/: CMakeLists.txt
Source/Logger/: CMakeLists.txt
Source/Math/: CMakeLists.txt
Source/MathSerialization/: CMakeLists.txt
Source/Physics.Bullet/: BulletWrapper.cpp  BulletWrapper.hpp  CMakeLists.txt  DLLControl.hpp  PhysicsInterface.hpp
Source/SystemCore/: CMakeLists.txt
Source/TempestPrebuilder/: ClangToolFrontEnd.h  ParseSettings.tps  TempestClassParser.cpp  TempestClassParser.h  TempestPrebuildSetup.cpp  TempestPrebuildSetup.h  TempestSerializationGenerator.cpp  TempestSerializationGenerator.h  main.cpp  stdafx.h
Source/Utility/: CMakeLists.txt
Source/archivesolutionfiles/: AudioEngine.vcxproj  AudioEngine.vcxproj.filters  AuthoringTool.vcxproj  AuthoringTool.vcxproj.filters  Bootstrap.vcxproj  Bootstrap.vcxproj.filters  Editor.vcxproj  Editor.vcxproj.filters  Graphics.OpenGL4.vcxproj  Graphics.OpenGL4.vcxproj.filters  Physics.Bullet.vcxproj  Physics.Bullet.vcxproj.filters  TempestEngine.sln  TempestEngine.sln.DotSettings  TempestEngine.vcxproj  TempestEngine.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters
(+2307 files in other folders)
